--- a/index.html
+++ b/index.html
@@ -23,33 +23,35 @@
 
 <body>
     <header>
-        <div class="logo-wrapper">
+        <div  class="logo-wrapper">
             <img src="./images/icons/RD logo.svg" alt="Rainy Days Logo">
-        </div>
-        <div class="nav-wrapper">
+        </div >
+        <nav class="nav-wrapper">
             <ul>
                 <li>
-                    <nav>
-                        <h5>Jackets</h5>
+                        <a href="#">Jackets</a>
                 </li>
                 <li>
-                    <h5>Size Guide</h5>
+                    <a href="#">Size Guide</a>
                 </li>
                 <li>
-                    <h5>Information</h5>
+                    <a href="#">Information</a>
                 </li>
                 <li>
-                    <h5><img src="./images/icons/cart.svg" height="25px"> Cart</h5>
+                    <a href="#"><img src="./images/icons/cart.svg" height="25px"> Cart</h5>
                 </li>
-                </nav>
-            </ul>
-        </div>
+        </nav>
         <div class="light-dark-switch-wrapper">content</div>
-
     </header>
     <main>
+        <article></article>
     </main>
     <footer>
+        <article class="footer-text">Call us on \<SOME PHONE NUMBER\>\br Email us on post@rainydays.weather</article>
+        <div class="logo-footer"><img src="/images/icons/RD logo.svg" alt="The logo" height="100vh"> est. MMXXV by
+            Jack Ets Sells.</div>
+        <article class="footer-text">Mr. Sells, our founder, saw the need for quality mid-range jackets, and decided to
+            make this, now long standing and reputable brand. All content is fictonal - probably.</article>
     </footer>
 </body>
 
