Completed a first "draft" of the footer.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <body>
     <header>
-        <div  class="logo-wrapper">
+        <div class="logo-wrapper">
             <img src="./images/icons/RD logo.svg" alt="Rainy Days Logo">
-        </div >
+        </div>
         <nav class="nav-wrapper">
             <ul>
                 <li>
-                        <a href="#">Jackets</a>
+                    <a href="#">Jackets</a>
                 </li>
                 <li>
                     <a href="#">Size Guide</a>
@@ -38,20 +38,39 @@
                     <a href="#">Information</a>
                 </li>
                 <li>
-                    <a href="#"><img src="./images/icons/cart.svg" height="25px"> Cart</h5>
+                    <a href="#"><img src="./images/icons/cart.svg" height="25px"> Cart</a>
                 </li>
+            </ul>
         </nav>
         <div class="light-dark-switch-wrapper">content</div>
     </header>
     <main>
-        <article></article>
+        <article>
+            <h1>Jackets for every season</h1>
+            <p>Discover our timless outwear designed for those who value comfort, durability, and style.
+                Our mid-range jackets are crafted to keep you protected in rain, wind, or sunshine - versatile
+                enough for city life, outdoor adventures, and everything in between. Reliable, comfortable, and
+                made to last, they're the perfect balance of function and sophistication.</p>
+            <p> Whether you're
+                braving the unpredictable weather or simply enjoying a stroll through the city, Rainy Days have the
+                jacket for you</p>
+            <div class="button-wrapper-right">
+                <button>Buy Jackets</button>
+            </div>
+        </article>
     </main>
     <footer>
-        <article class="footer-text">Call us on \<SOME PHONE NUMBER\>\br Email us on post@rainydays.weather</article>
-        <div class="logo-footer"><img src="/images/icons/RD logo.svg" alt="The logo" height="100vh"> est. MMXXV by
-            Jack Ets Sells.</div>
-        <article class="footer-text">Mr. Sells, our founder, saw the need for quality mid-range jackets, and decided to
-            make this, now long standing and reputable brand. All content is fictonal - probably.</article>
+        <article class="footer-text">
+            <p>Call us on &lt;SOME PHONE NUMBER&gt;<br> Email us on post@rainydays.weather</p>
+        </article>
+        <div class="logo-footer"><img src="/images/icons/RD logo.svg" alt="The logo" height="100">
+            <p> est. MMXXV by
+                Jack Ets Sells.</p>
+        </div>
+        <article class="footer-text">
+            <p>Mr. Sells, our founder, saw the need for quality mid-range jackets, and decided to
+                make this, now long standing and reputable brand. All content is fictonal - probably.</p>
+        </article>
     </footer>
 </body>
 
