Refine unit usage and fixed footer-logo
Following the 2018 CSS In Depth (book) guideline:
“When in doubt, use rems for font-size, pixels for borders, and ems for most other properties.”
Not applying this rule strictly, as newer CSS features can make other units more appropriate.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div class="logo-wrapper">
-            <img src="./images/icons/RD logo.svg" alt="Rainy Days Logo">
+            <img src="./images/icons/RD-logo.svg" alt="Rainy Days Logo">
         </div>
         <nav class="nav-wrapper">
             <ul>
@@ -60,17 +60,16 @@
         </article>
     </main>
     <footer>
-        <article class="footer-text">
+        <div class="footer-text">
             <p>Call us on &lt;SOME PHONE NUMBER&gt;<br> Email us on post@rainydays.weather</p>
-        </article>
-        <div class="logo-footer"><img src="/images/icons/RD logo.svg" alt="The logo" height="100">
-            <p> est. MMXXV by
-                Jack Ets Sells.</p>
         </div>
-        <article class="footer-text">
+        <div class="logo-footer">
+            <img src="./images/icons/RD-logo-footer-version.svg" alt="">
+        </div>
+        <div class="footer-text">
             <p>Mr. Sells, our founder, saw the need for quality mid-range jackets, and decided to
                 make this, now long standing and reputable brand. All content is fictonal - probably.</p>
-        </article>
+        </div>
     </footer>
 </body>
 
