Worked on header, buttons are left to be styled

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="logo-wrapper">
             <img src="./images/icons/RD-logo.svg" alt="Rainy Days Logo">
         </div>
+        <button class="hamburger-menu">Ham</button>
         <nav class="nav-wrapper">
             <ul>
                 <li>
@@ -38,11 +39,11 @@
                     <a href="#">Information</a>
                 </li>
                 <li>
-                    <a href="#"><img src="./images/icons/cart.svg" height="25px"> Cart</a>
+                    <a href="#"><img src="./images/icons/cart.svg"> Cart</a>
                 </li>
             </ul>
         </nav>
-        <div class="light-dark-switch-wrapper">content</div>
+        <div class="light-dark-switch-wrapper">LIGHT <button>Content </button>DARK</div>
     </header>
     <main>
         <article>
