Added color-theme toggle button
Based on code from
https://www.w3schools.com/howto/howto_css_switch.asp
Further adjustments to color choices are needed.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
                 </li>
             </ul>
         </nav>
-        <div class="light-dark-switch-wrapper">LIGHT <button>Content </button>DARK</div>
+        <div class="light-dark-switch-wrapper">
+            <h5>LIGHT</h5>
+            <label class="theme-switch">
+                <input type="checkbox">
+                <span class="slider"></span>
+            </label>
+            <h5>DARK</h5>
+        </div>
     </header>
     <main>
         <article>
