Add color mode toggle support for text only in this commit
Used ChatGPT for guidance on implementing a CSS-only light/dark mode toggle.
Will handle the remaining refactoring and design adjustments on my own.
Upcoming tasks:
- Remove redundant header label definitions
- Consolidate and clarify color variable naming
- Keep code and design consistent across modes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="light-dark-switch-wrapper">
             <h5>LIGHT</h5>
             <label class="theme-switch">
-                <input type="checkbox">
+                <input id="theme-toggle" type="checkbox">
                 <span class="slider"></span>
             </label>
             <h5>DARK</h5>
