Color and header cleanup
Deleted all the unused header-definitons and made the color-themes compliant with the design

--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
         <nav class="nav-wrapper">
             <ul>
                 <li>
-                    <a href="#">Jackets</a>
+                    <a href="#"><h2>Jackets</h2></a>
                 </li>
                 <li>
-                    <a href="#">Size Guide</a>
+                    <a href="#"><h2>Size Guide</h2></a>
                 </li>
                 <li>
-                    <a href="#">Information</a>
+                    <a href="#"><h2>Information</h2></a>
                 </li>
                 <li>
                     <a href="#">
@@ -189,18 +189,18 @@
                                     id="path79-9-1" cx="179.11441" cy="240.46046" rx="0.72496861" ry="0.70158249" />
                             </g>
                         </svg>
-                        Cart
+                        <h2>Cart</h2>
                     </a>
                 </li>
             </ul>
         </nav>
         <div class="light-dark-switch-wrapper">
-            <h5>LIGHT</h5>
+            <h2>LIGHT</h2>
             <label class="theme-switch">
                 <input id="theme-toggle" type="checkbox">
                 <span class="slider"></span>
             </label>
-            <h5>DARK</h5>
+            <h2>DARK</h2>
         </div>
     </header>
     <main>
