--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="logo-wrapper">
-        <!--THIS IS THE LOGO SVG-CODE -->
+            <!--THIS IS THE LOGO SVG-CODE -->
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
             <!-- Created with Inkscape (http://www.inkscape.org/) -->
             <svg viewBox="0 0 334.53339 179.75963" version="1.1" id="svg1" xml:space="preserve"
@@ -156,19 +156,33 @@
                         id="path75" />
                 </g>
             </svg>
-
         </div>
-        <button class="hamburger-menu">Ham</button>
+        <div id="hamburger-menu">
+
+            <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+            <svg width="44mm" height="44mm" viewBox="0 0 44 44" version="1.1" id="svg1"
+                xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+                <rect style="fill:var(--text-color);" width="44" height="7" x="-1.6631712e-07" y="1.0221e-07" />
+                <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="17.6" />
+                <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="35.200001" />
+            </svg>
+        </div>
         <nav class="nav-wrapper">
             <ul>
                 <li>
-                    <a href="#"><h2>Jackets</h2></a>
+                    <a href="#">
+                        <h2>Jackets</h2>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><h2>Size Guide</h2></a>
+                    <a href="#">
+                        <h2>Size Guide</h2>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><h2>Information</h2></a>
+                    <a href="#">
+                        <h2>Information</h2>
+                    </a>
                 </li>
                 <li>
                     <a href="#">
