--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </svg>
         </div>
         <div id="hamburger-menu">
-
+            <input id="navigation-menu-wrapper" type="checkbox" />
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
             <svg width="44mm" height="44mm" viewBox="0 0 44 44" version="1.1" id="svg1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
