Used mainpage as template for the remaining pages

--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days</title>
-    <link rel="stylesheet" href="./styles/typography-and-color.css">
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/base.css">
-    <link rel="icon" href="./images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32"
+    <link rel="stylesheet" href="../styles/typography-and-color.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/base.css">
+    <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32"
         media="(prefers-color-scheme: light)">
     <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32"
         media="(prefers-color-scheme: dark)">
@@ -160,7 +160,7 @@
         <nav class="nav-wrapper">
             <ul>
                 <li>
-                    <a href="./content-overview">
+                    <a href="./">
                         <h2>Jackets</h2>
                     </a>
                 </li>
@@ -218,19 +218,7 @@
         </div>
     </header>
     <main>
-        <article>
-            <h1>Jackets for every season</h1>
-            <p>Discover our timless outwear designed for those who value comfort, durability, and style.
-                Our mid-range jackets are crafted to keep you protected in rain, wind, or sunshine - versatile
-                enough for city life, outdoor adventures, and everything in between. Reliable, comfortable, and
-                made to last, they're the perfect balance of function and sophistication.</p>
-            <p> Whether you're
-                braving the unpredictable weather or simply enjoying a stroll through the city, Rainy Days have the
-                jacket for you</p>
-            <div class="button-wrapper-right">
-                <button>Buy Jackets</button>
-            </div>
-        </article>
+        
     </main>
     <footer>
         <div class="footer-text">
