--- a/product-page/index.html
+++ b/product-page/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days</title>
-    <link rel="stylesheet" href="./styles/typography-and-color.css">
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/base.css">
-    <link rel="icon" href="./images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32"
+    <link rel="stylesheet" href="../styles/typography-and-color.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/base.css">
+    <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32"
         media="(prefers-color-scheme: light)">
     <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32"
         media="(prefers-color-scheme: dark)">
@@ -160,22 +160,22 @@
         <nav class="nav-wrapper">
             <ul>
                 <li>
-                    <a href="./content-overview">
+                    <a href="../content-overview">
                         <h2>Jackets</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="/sizes">
+                    <a href="../sizes">
                         <h2>Size Guide</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="/about-us">
+                    <a href="../about-us">
                         <h2>Information</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="/payment">
+                    <a href="../payment">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg width="13.605105mm" height="10.412868mm" viewBox="0 0 13.605106 10.412868" version="1.1"
                             id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
@@ -218,19 +218,8 @@
         </div>
     </header>
     <main>
-        <article>
-            <h1>Jackets for every season</h1>
-            <p>Discover our timless outwear designed for those who value comfort, durability, and style.
-                Our mid-range jackets are crafted to keep you protected in rain, wind, or sunshine - versatile
-                enough for city life, outdoor adventures, and everything in between. Reliable, comfortable, and
-                made to last, they're the perfect balance of function and sophistication.</p>
-            <p> Whether you're
-                braving the unpredictable weather or simply enjoying a stroll through the city, Rainy Days have the
-                jacket for you</p>
-            <div class="button-wrapper-right">
-                <button>Buy Jackets</button>
-            </div>
-        </article>
+        
+
     </main>
     <footer>
         <div class="footer-text">
