--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="../styles/typography-and-color.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/content-main.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/base.css">
-    <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32"
+    <link rel="icon" href="../images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32"
         media="(prefers-color-scheme: light)">
-    <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32"
+    <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32"
         media="(prefers-color-scheme: dark)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -218,7 +219,47 @@
         </div>
     </header>
     <main>
-        
+
+
+
+        <a class="content-short" href="../product-page">
+            <h1>Stormguard Pro</h1>
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>AeroLite Shell</h1>
+            <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>Crimson Motion</h1>
+            <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>NightRider</h1>
+            <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>Urban Shield</h1>
+            <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>TrailMaster GTX</h1>
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>EverWool Fleece</h1>
+            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+
+
+
     </main>
     <footer>
         <div class="footer-text">
