Replace 'Buy Jackets' button with link and update styles
Changed the 'Buy Jackets' button in index.html to an anchor link for navigation. Updated CSS selectors and styles to apply button appearance to the anchor, ensuring consistent look and feel. Added text-decoration: none to anchor elements for improved styling.

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 braving the unpredictable weather or simply enjoying a stroll through the city, Rainy Days have the
                 jacket for you</p>
             <div class="button-wrapper-right">
-                <button>Buy Jackets</button>
+                <a href="/content-overview">Buy Jackets</a>
             </div>
         </article>
     </main>
