Added "Other popular products" aside in product page

--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days</title>
+    <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/typography-and-color.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/content-main.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/base.css">
+    <link rel="stylesheet" href="../styles/content-main.css">
+    <link rel="stylesheet" href="../styles/content-short.css">
     <link rel="icon" href="../images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
     <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,9 +72,6 @@
         </div>
     </header>
     <main>
-
-
-
         <a class="content-short" href="../product-page">
             <h1>Stormguard Pro</h1>
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
@@ -109,9 +107,6 @@
             <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
             <button>BUY </button>
         </a>
-
-
-
     </main>
     <footer>
         <div class="footer-text">
