--- a/product-page/index.html
+++ b/product-page/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days</title>
+    <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/typography-and-color.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/base.css">
+    <link rel="stylesheet" href="../styles/product-main.css">
+    <link rel="stylesheet" href="../styles/content-short.css">
     <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
     <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,8 +71,46 @@
             <svg width="44mm" height="44mm" viewBox="0 0 44 44" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"> <rect style="fill:var(--text-color);" width="44" height="7" x="-1.6631712e-07" y="1.0221e-07" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="17.6" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="35.200001" /> </svg>
         </div>
     </header>
+    <aside>
+    <h1>Other popular products</h1>
+        <a class="content-short" href="../product-page">
+            <h1>Stormguard Pro</h1>
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>AeroLite Shell</h1>
+            <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>Crimson Motion</h1>
+            <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>NightRider</h1>
+            <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>Urban Shield</h1>
+            <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>TrailMaster GTX</h1>
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+        <a class="content-short" href="../product-page">
+            <h1>EverWool Fleece</h1>
+            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
+            <button>BUY </button>
+        </a>
+    </aside>
     <main>
-
+        tekst
     </main>
     <footer>
         <div class="footer-text">
