Temporary @media rules fix

--- a/payment/index.html
+++ b/payment/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/at-media-rules.css">
     <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
     <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
