--- a/product-page/index.html
+++ b/product-page/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainy Days</title>
+    <!-- My CSS-files -->
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/typography-and-color.css">
     <link rel="stylesheet" href="../styles/header.css">
@@ -13,13 +14,13 @@
     <link rel="stylesheet" href="../styles/product-main.css">
     <link rel="stylesheet" href="../styles/content-short.css">
     <link rel="stylesheet" href="../styles/at-media-rules.css">
-    <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
+    <!-- Favicon added -->
+    <link rel="icon" href="../images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="./images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 
