Made contact info for payment

--- a/payment/index.html
+++ b/payment/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/typography-and-color.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/pay-main.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/at-media-rules.css">
     <!-- Favicon added -->
@@ -71,7 +72,55 @@
         </div>
     </header>
     <main>
-
+        <section class="payment-contact-info">
+            <h1>Contact info</h1>
+            <form>
+                <div>
+                    <label>
+                        <p>First Name*</p>
+                    </label>
+                    <input type="entry">
+                </div>
+                <div>
+                    <label>
+                        <p>Last Name*</p>
+                    </label>
+                    <input type="entry">
+                </div><br>
+                <div>
+                    <label>
+                        <p>Email*</p>
+                    </label>
+                    <input type="entry">
+                </div>
+                <br>
+                <br>
+                <div>
+                    <label>
+                        <p>Contry*</p>
+                    </label>
+                    <input type="entry">
+                </div>
+                <div>
+                    <label>
+                        <p>Phone Number</p>
+                    </label>
+                    <input type="entry">
+                </div><br>
+                <div>
+                    <label>
+                        <p>Postal Code*</p>
+                    </label>
+                    <input type="entry">
+                </div>
+                <div>
+                    <label>
+                        <p>Street Address*</p>
+                    </label>
+                    <input type="entry">
+                </div>
+            </form>
+        </section>
     </main>
     <footer>
         <div class="footer-text">
