--- a/product-page/index.html
+++ b/product-page/index.html
@@ -79,41 +79,20 @@
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
             <button>BUY </button>
         </a>
-        <a class="content-short" href="../product-page">
-            <h1>AeroLite Shell</h1>
-            <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="Urban Shield Jacket" />
-            <button>BUY </button>
-        </a>
-        <a class="content-short" href="../product-page">
-            <h1>Crimson Motion</h1>
-            <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket" />
-            <button>BUY </button>
-        </a>
-        <a class="content-short" href="../product-page">
-            <h1>NightRider</h1>
-            <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="Urban Shield Jacket" />
-            <button>BUY </button>
-        </a>
-        <a class="content-short" href="../product-page">
-            <h1>Urban Shield</h1>
-            <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket" />
-            <button>BUY </button>
-        </a>
-        <a class="content-short" href="../product-page">
-            <h1>TrailMaster GTX</h1>
-            <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="Urban Shield Jacket" />
-            <button>BUY </button>
-        </a>
     </aside>
     <main>
-        <div class="img-wrapper">
-            <a class="content-short" href="../product-page">
-                <h1>EverWool Fleece</h1>
-                <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
-                <button>BUY </button>
-            </a>
+        <div class="jacket-wrapper">
+            <h1>EverWool Fleece</h1>
+            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
         </div>
-        <div class="product-summary">Content</div>
+        <div class="product-summary">
+            <p>This jacket is designed to provide lasting comfort and protection, 
+            no matter the season. Constructed with durable fabrics and refined detailing, 
+            it shields you from the elements while remaining breathable and lightweight.
+             The fit ensures both freedom of movement and a flattering silhouette, 
+             making it a versatile choice for workdays, weekends, and everything in 
+             between. A jacket that combines strength, style, and everyday ease.</p>
+        </div>
         <div class="button-wrapper-right"><a href="../payment">BUY</a></div>
     </main>
     <footer>
