--- a/product-page/index.html
+++ b/product-page/index.html
@@ -77,7 +77,7 @@
         <a class="content-short" href="../product-page">
             <h1>Stormguard Pro</h1>
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
-            <button>BUY </button>
+            <div class="button-style-main">BUY </div>
         </a>
     </aside>
     <main>
@@ -93,7 +93,7 @@
              making it a versatile choice for workdays, weekends, and everything in 
              between. A jacket that combines strength, style, and everyday ease.</p>
         </div>
-        <div class="button-wrapper-right"><a href="../payment">BUY</a></div>
+        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
