--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -74,37 +74,37 @@
         </div>
     </header>
     <main>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product">
             <h1>Stormguard Pro</h1>
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product">
             <h1>AeroLite Shell</h1>
             <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product">
             <h1>Crimson Motion</h1>
             <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product">
             <h1>NightRider</h1>
             <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product">
             <h1>Urban Shield</h1>
             <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product">
             <h1>TrailMaster GTX</h1>
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product-">
             <h1>EverWool Fleece</h1>
             <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
