Fixed the product detail page for phone sizes

--- a/product/index.html
+++ b/product/index.html
@@ -74,7 +74,7 @@
     </header>
     <aside>
         <h1>Other popular products</h1>
-        <a class="content-short" href="../product-page">
+        <a class="content-short" href="../product">
             <h1>Stormguard Pro</h1>
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
