Completed the payment prosess
Site is now complete, and refactoring/controll will start -finally

--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -104,7 +104,7 @@
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product-">
+        <a class="content-short" href="../product">
             <h1>EverWool Fleece</h1>
             <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
             <div class="button-style-main">BUY </div>
