Added some meta-tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Homepage of Rainy Days, provider of technical 
+    jackets built for rain, wind, and everyday wear. Waterproof, durable, and made to last. Shop Rainy Days outerwear.">
     <title>Rainy Days</title>
+    <meta name="author" content="Egil Johnsen Dahle">
+    <!-- Allow  search engines and robots from indexing this page, technically default, but usefull 
+        (↓) addition since we have prevented this on another page (the payment page) -->
+    <meta name="robots" content="index, follow">
     <!-- My CSS-files -->
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/typography-and-color.css">
@@ -13,8 +19,9 @@
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/at-media-rules.css">
     <!-- Favicon added -->
-    <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
+    <!-- Firefox wont use this correctly, it will read the last icon and use this, not the browsers theme-appropriate icon -->
     <link rel="icon" href="./images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
