--- a/payment/index.html
+++ b/payment/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Complete your purchase securely on Rainy Days. 
+    Review your order details, enter your payment information, and confirm your order safely.">
     <title>Rainy Days</title>
+    <meta name="author" content="Egil Johnsen Dahle">
+    <!-- Prevent (↓) search engines and robots from indexing this page, as this is a temporary page, without content -->
+    <meta name="robots" content="noindex, nofollow">
     <!-- My CSS-files -->
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/typography-and-color.css">
