--- a/sizes/index.html
+++ b/sizes/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find your perfect fit with the Rainy Days size guide. 
+    Learn how to measure for waterproof jackets designed for comfort and performance.">
     <title>Rainy Days</title>
+    <meta name="author" content="Egil Johnsen Dahle">
+    <!-- Allow  search engines and robots from indexing this page, technically default, but usefull 
+        (↓) addition since we have prevented this on another page (the payment page) -->
+    <meta name="robots" content="index, follow">
     <!-- My CSS-files -->
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/typography-and-color.css">
