--- a/about-us/index.html
+++ b/about-us/index.html
@@ -71,7 +71,7 @@
             <h2>DARK</h2>
         </div>
         <div id="hamburger-menu">
-            <input id="navigation-menu-wrapper" type="checkbox" />
+            <input id="navigation-menu-wrapper" type="checkbox">
             <!-- The hamburger-svg file onelined-->
             <svg width="44mm" height="44mm" viewBox="0 0 44 44" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"> <rect style="fill:var(--text-color);" width="44" height="7" x="-1.6631712e-07" y="1.0221e-07" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="17.6" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="35.200001" /> </svg>
         </div>
