--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -74,7 +74,7 @@
             <h2>DARK</h2>
         </div>
         <div id="hamburger-menu">
-            <input id="navigation-menu-wrapper" type="checkbox" />
+            <input id="navigation-menu-wrapper" type="checkbox">
             <!-- The hamburger-svg file onelined-->
             <svg width="44mm" height="44mm" viewBox="0 0 44 44" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"> <rect style="fill:var(--text-color);" width="44" height="7" x="-1.6631712e-07" y="1.0221e-07" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="17.6" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="35.200001" /> </svg>
         </div>
@@ -82,37 +82,37 @@
     <main>
         <a class="content-short" href="../product">
             <h1>Stormguard Pro</h1>
-            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
         <a class="content-short" href="../product">
             <h1>AeroLite Shell</h1>
-            <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="Urban Shield Jacket" />
+            <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
         <a class="content-short" href="../product">
             <h1>Crimson Motion</h1>
-            <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket" />
+            <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
         <a class="content-short" href="../product">
             <h1>NightRider</h1>
-            <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="Urban Shield Jacket" />
+            <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
         <a class="content-short" href="../product">
             <h1>Urban Shield</h1>
-            <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket" />
+            <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
         <a class="content-short" href="../product">
             <h1>TrailMaster GTX</h1>
-            <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="Urban Shield Jacket" />
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
         <a class="content-short" href="../product">
             <h1>EverWool Fleece</h1>
-            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
+            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
     </main>
