--- a/payment/index.html
+++ b/payment/index.html
@@ -71,7 +71,7 @@
             <h2>DARK</h2>
         </div>
         <div id="hamburger-menu">
-            <input id="navigation-menu-wrapper" type="checkbox" />
+            <input id="navigation-menu-wrapper" type="checkbox">
             <!-- The hamburger-svg file onelined-->
             <svg width="44mm" height="44mm" viewBox="0 0 44 44" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"> <rect style="fill:var(--text-color);" width="44" height="7" x="-1.6631712e-07" y="1.0221e-07" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="17.6" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="35.200001" /> </svg>
         </div>
@@ -85,47 +85,47 @@
             <form>
                 <div class="form-item">
                     <label for="firstName">
-                        <p>First Name*</p>
+                        First Name*
                     </label>
-                    <input type="text" name="firstName">
+                    <input id="firstName" type="text" name="firstName">
                 </div>
                 <div class="form-item">
                     <label for="lastName">
-                        <p>Last Name*</p>
+                        Last Name*
                     </label>
-                    <input type="text" name="lastName">
+                    <input id="lastName" type="text" name="lastName">
                 </div><br>
                 <div class="form-item">
                     <label for="email">
-                        <p>Email*</p>
+                        Email*
                     </label>
-                    <input type="email" name="email">
+                    <input id="email" type="email" name="email">
                 </div>
                 <br>
                 <br>
                 <div class="form-item">
                     <label for="country">
-                        <p>Country*</p>
+                        Country*
                     </label>
-                    <input type="text" name="country">
+                    <input id="country" type="text" name="country">
                 </div>
                 <div class="form-item">
                     <label for="phoneNumber">
-                        <p>Phone Number</p>
+                        Phone Number
                     </label>
                     <input type="tel" name="phoneNumber">
                 </div><br>
                 <div class="form-item">
                     <label for="postalCode">
-                        <p>Postal Code*</p>
+                        Postal Code*
                     </label>
-                    <input inputmode="numeric" pattern="[0-9]*" name="postalCode">
+                    <input id="postalCode" inputmode="numeric" pattern="[0-9]*" name="postalCode">
                 </div>
                 <div class="form-item">
                     <label for="streetAddress">
-                        <p>Street Address*</p>
+                        Street Address*
                     </label>
-                    <input type="entry" name="streetAddress">
+                    <input id="streetAddress" type="text" name="streetAddress">
                 </div>
             </form>
         </section>
@@ -136,29 +136,29 @@
             <form>
                 <div class="form-item">
                     <label for="cardNumber">
-                        <p>Card Number</p>
+                        Card Number
                     </label>
-                    <input inputmode="numeric" pattern="[0-9]*" name="cardNumber">
-                </div>
+                    <input id="cardNumber" inputmode="numeric" pattern="[0-9]*" name="cardNumber">
+                </div><br>
                 <div class="form-item">
                     <label for="ccv">
-                        <p>CVV</p>
+                        CVV
                     </label>
-                    <input inputmode="numeric" pattern="[0-9]*" name="ccv">
+                    <input id="ccv" inputmode="numeric" pattern="[0-9]*" name="ccv">
                 </div>
                 <div class="form-item">
                     <label for="expirationDate">
-                        <p>Expiration Date</p>
+                        Expiration Date
                     </label>
                 </div>
                 <div class="form-item">
-                    <input type="date" name="expirationDate">
+                    <input id="expirationDate" type="date" name="expirationDate">
                 </div>
                 <div class="form-row">
-                    <label for="country">
-                        <p>Cardholder Name</p>
+                    <label for="cardholderName">
+                        Cardholder Name
                     </label>
-                    <input type="text" name="country">
+                    <input id="cardholderName" type="text" name="cardholderName">
                 </div>
             </form>
         </section>
@@ -172,12 +172,12 @@
 
             <h1> Order Summary</h1>
             <div class="order-item">
-                <img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket" />
+                <img src="../images/jackets/RainyDays_Jacket3.webp" alt="Urban Shield Jacket">
                 <p>Urban Shield</p>
                 <p><strong>£139</strong></p>
             </div>
             <div class="order-item">
-                <img src="../images/jackets/RainyDays_Jacket2.webp" alt="AeroLite Shell" />
+                <img src="../images/jackets/RainyDays_Jacket2.webp" alt="AeroLite Shell">
                 <p>AeroLite Shell</p>
                 <p><strong>£119</strong></p>
             </div>
@@ -195,7 +195,7 @@
 
             <div class="billing-button-wrapper">
                 <h2 class=".button-style-main">TO PAYMENT</h2>
-                <input id="to-billing-button" type="checkbox" />
+                <input id="to-billing-button" type="checkbox">
             </div>
         </section>
 
@@ -207,7 +207,7 @@
 
             <div class="billing-button-wrapper">
                 <h2 class=".button-style-main">BUY JACKET</h2>
-                <input id="to-summary-button" type="checkbox" />
+                <input id="to-summary-button" type="checkbox">
             </div>
         </section>
     </main>
