--- a/product/index.html
+++ b/product/index.html
@@ -73,23 +73,23 @@
             <h2>DARK</h2>
         </div>
         <div id="hamburger-menu">
-            <input id="navigation-menu-wrapper" type="checkbox" />
+            <input id="navigation-menu-wrapper" type="checkbox">
             <!-- The hamburger-svg file onelined-->
             <svg width="44mm" height="44mm" viewBox="0 0 44 44" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"> <rect style="fill:var(--text-color);" width="44" height="7" x="-1.6631712e-07" y="1.0221e-07" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="17.6" /> <rect style="fill:var(--text-color);" width="44" height="7" x="-2.3841858e-06" y="35.200001" /> </svg>
         </div>
     </header>
     <aside>
-        <h1>Other popular products</h1>
+        <h2>Other popular products</h2>
         <a class="content-short" href="../product">
-            <h1>Stormguard Pro</h1>
-            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket" />
+            <h2>Stormguard Pro</h2>
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket">
             <div class="button-style-main">BUY </div>
         </a>
     </aside>
     <main>
         <div class="jacket-wrapper">
             <h1>EverWool Fleece</h1>
-            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket" />
+            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket">
         </div>
         <div class="product-summary">
             <p>This jacket is designed to provide lasting comfort and protection,
