Working on cleanup using https://wave.webaim.org

--- a/payment/index.html
+++ b/payment/index.html
@@ -113,7 +113,7 @@
                     <label for="phoneNumber">
                         Phone Number
                     </label>
-                    <input type="tel" name="phoneNumber">
+                    <input id="phoneNumber" type="tel" name="phoneNumber">
                 </div><br>
                 <div class="form-item">
                     <label for="postalCode">
