--- a/sizes/index.html
+++ b/sizes/index.html
@@ -79,7 +79,7 @@
     <main>
         <article>
             <h1>Size Guide for our Jackets</h1><br><br>
-            <img src="../images/jackets/sizes.webp" alt="Image of how to measure your jacket size using width and height">
+            <img src="../images/jackets/sizes.webp" alt="Image of jacket measurements">
             <br><br>
             <table>
                 <thead>
