--- a/about-us/index.html
+++ b/about-us/index.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <div class="logo-wrapper">
-            <a class="logo" href="/">
+            <a class="logo" href="./">
                 <img src="../images/icons/RD-logo-lightmode.svg" alt="Rainy Days logo for light-theme" class="light-theme">
                 <img src="../images/icons/RD-logo-darkmode.svg" alt="Rainy Days logo for dark-theme" class="dark-theme">
             </a>
@@ -92,7 +92,7 @@
                 braving the unpredictable weather or simply enjoying a stroll through the city, Rainy Days have the
                 jacket for you</p>
             <div class="button-wrapper-right">
-                <a class="button-style-main" href="/content-overview">Buy Jackets</a>
+                <a class="button-style-main" href="./content-overview">Buy Jackets</a>
             </div>
 
         </article>
