--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -33,7 +33,7 @@
 <body>
     <header>
         <div class="logo-wrapper">
-            <a class="logo" href="/">
+            <a class="logo" href="../">
                 <img src="../images/icons/RD-logo-lightmode.svg" alt="Rainy Days logo for light-theme" class="light-theme">
                 <img src="../images/icons/RD-logo-darkmode.svg" alt="Rainy Days logo for dark-theme" class="dark-theme">
             </a>
@@ -47,17 +47,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/sizes">
+                    <a href="./sizes">
                         <h2>Size Guide</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="/about-us">
+                    <a href="./about-us">
                         <h2>Information</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="/payment">
+                    <a href="./payment">
                         <img src="../images/icons/cart-lightmode.svg" alt="Cart icon" class="light-theme">
                         <img src="../images/icons/cart-darkmode.svg" alt="Cart icon" class="dark-theme">
                         <h2>Cart</h2>
