--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="../styles/at-media-rules.css">
     <!-- Favicon added -->
     <link rel="icon" href="../images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="./images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,17 +47,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./sizes">
+                    <a href="../sizes">
                         <h2>Size Guide</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="./about-us">
+                    <a href="../about-us">
                         <h2>Information</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="./payment">
+                    <a href="../payment">
                         <img src="../images/icons/cart-lightmode.svg" alt="Cart icon" class="light-theme">
                         <img src="../images/icons/cart-darkmode.svg" alt="Cart icon" class="dark-theme">
                         <h2>Cart</h2>
