--- a/sizes/index.html
+++ b/sizes/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/at-media-rules.css">
     <!-- Favicon added -->
-    <link rel="icon" href="./images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
-    <link rel="icon" href="./images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="../images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="../images/icons/favicon-light.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: dark)">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -108,7 +108,7 @@
                 </tbody>
             </table>
             <div class="button-wrapper-right">
-                <a class="button-style-main" href="/content-overview">Buy Jackets</a>
+                <a class="button-style-main" href="../content-overview">Buy Jackets</a>
             </div>
             <p>This page is one of the last one on my list for improvements, so we have to live with
                 it like this until I get time to fix it. Just buy some jackets!</p>
