Updated the jacket choices

--- a/product/nightrider.html
+++ b/product/nightrider.html
@@ -82,14 +82,14 @@
         <h2>Other popular products</h2>
         <a class="content-short" href="../product">
             <h2>Stormguard Pro</h2>
-            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Urban Shield Jacket">
+            <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Stormguard Pro Jacket">
             <div class="button-style-main">BUY </div>
         </a>
     </aside>
     <main>
         <div class="jacket-wrapper">
-            <h1>EverWool Fleece</h1>
-            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="Urban Shield Jacket">
+            <h1>NightRider</h1>
+            <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="NightRider Jacket">
         </div>
         <div class="product-summary">
             <p>This jacket is designed to provide lasting comfort and protection,
