--- a/product/trail-master-gtx.html
+++ b/product/trail-master-gtx.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Browse all Rainy Days jackets. Waterproof, 
-    windproof, and built for performance in any weather. Find your perfect jacket for city or mountain adventures.">
+    <meta name="description" content="EverWool Fleece by Rainy Days - a lightweight, waterproof 
+    jacket designed for rain, wind, and daily wear.">
     <title>Rainy Days</title>
     <meta name="author" content="Egil Johnsen Dahle">
     <!-- Allow  search engines and robots from indexing this page, technically default, but usefull 
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/content-main.css">
+    <link rel="stylesheet" href="../styles/product-main.css">
     <link rel="stylesheet" href="../styles/content-short.css">
     <link rel="stylesheet" href="../styles/at-media-rules.css">
     <!-- Favicon added -->
@@ -38,11 +38,10 @@
                 <img src="../images/icons/RD-logo-darkmode.svg" alt="Rainy Days logo for dark-theme" class="dark-theme">
             </a>
         </div>
-        <!-- The site-navigation -->
         <nav class="nav-wrapper">
             <ul>
                 <li>
-                    <a href="./">
+                    <a href="../content-overview">
                         <h2>Jackets</h2>
                     </a>
                 </li>
@@ -79,42 +78,28 @@
             <img src="../images/icons/hamburger-darkmode.svg" alt="Hamburger icon" class="dark-theme">
         </div>
     </header>
-    <main>
-        <a class="content-short" href="../product/stormguard-pro.html">
-            <h1>Stormguard Pro</h1>
+    <aside>
+        <h2>Other popular products</h2>
+        <a class="content-short" href="../product">
+            <h2>Stormguard Pro</h2>
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket1.webp" alt="Stormguard Pro Jacket">
             <div class="button-style-main">BUY </div>
         </a>
-        <a class="content-short" href="../product/aerolite-shell.html">
-            <h1>AeroLite Shell</h1>
-            <p>£119</p><img src="../images/jackets/RainyDays_Jacket2.webp" alt="AeroLite Shell Jacket">
-            <div class="button-style-main">BUY </div>
-        </a>
-        <a class="content-short" href="../product/crimson-motion.html">
-            <h1>Crimson Motion</h1>
-            <p>£139</p><img src="../images/jackets/RainyDays_Jacket3.webp" alt="Crimson Motion Jacket">
-            <div class="button-style-main">BUY </div>
-        </a>
-        <a class="content-short" href="../product/nightrider.html">
-            <h1>NightRider</h1>
-            <p>£159</p><img src="../images/jackets/RainyDays_Jacket4.webp" alt="NightRider Jacket">
-            <div class="button-style-main">BUY </div>
-        </a>
-        <a class="content-short" href="../product/urban-shield.html">
-            <h1>Urban Shield</h1>
-            <p>£99</p><img src="../images/jackets/RainyDays_Jacket5.webp" alt="Urban Shield Jacket">
-            <div class="button-style-main">BUY </div>
-        </a>
-        <a class="content-short" href="../product/trail-master-gtx.html">
+    </aside>
+    <main>
+        <div class="jacket-wrapper">
             <h1>TrailMaster GTX</h1>
             <p>£179</p><img src="../images/jackets/RainyDays_Jacket6.webp" alt="TrailMaster GTX Jacket">
-            <div class="button-style-main">BUY </div>
-        </a>
-        <a class="content-short" href="../product/everwool-fleece.html">
-            <h1>EverWool Fleece</h1>
-            <p>£109</p><img src="../images/jackets/RainyDays_Jacket7.webp" alt="EverWool Fleece Jacket">
-            <div class="button-style-main">BUY </div>
-        </a>
+        </div>
+        <div class="product-summary">
+            <p>This jacket is designed to provide lasting comfort and protection,
+                no matter the season. Constructed with durable fabrics and refined detailing,
+                it shields you from the elements while remaining breathable and lightweight.
+                The fit ensures both freedom of movement and a flattering silhouette,
+                making it a versatile choice for workdays, weekends, and everything in
+                between. A jacket that combines strength, style, and everyday ease.</p>
+        </div>
+        <div class="button-wrapper-right"><a class="button-style-main" href="../payment">BUY</a></div>
     </main>
     <footer>
         <div class="footer-text">
