--- a/sizes/index.html
+++ b/sizes/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/size-main.css">
     <link rel="stylesheet" href="../styles/at-media-rules.css">
     <!-- Favicon added -->
     <link rel="icon" href="../images/icons/favicon-dark.svg" type="image/svg+xml" sizes="32x32" media="(prefers-color-scheme: light)">
