Added opengraph support for homepage

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -92,7 +92,7 @@
                 braving the unpredictable weather or simply enjoying a stroll through the city, Rainy Days have the
                 jacket for you</p>
             <div class="button-wrapper-right">
-                <a class="button-style-main" href="./content-overview">Buy Jackets</a>
+                <a class="button-style-main" href="../content-overview">Buy Jackets</a>
             </div>
 
         </article>
