Support for twitter cards

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     <meta property="og:url" content="https://lektordahle.github.io/html-css-egil-dahle/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Rainy Days">
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Rainy Days - Technical Jackets Built for Real Weather">
+    <meta name="twitter:description" content="Waterproof, wind-resistant jackets built for everyday use. Durable, reliable, and made to last - from city streets to mountain trails.">
+    <meta name="twitter:image" content="https://lektordahle.github.io/html-css-egil-dahle/images/open-graph-image.webp">
+
 </head>
 
 <body>
