--- a/content-overview/index.html
+++ b/content-overview/index.html
@@ -28,6 +28,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <!-- Open Graph Cards -->
+    <meta property="og:title" content="Rainy Days - All Jackets">
+    <meta property="og:description" content="Explore all Rainy Days jackets. Waterproof, windproof, and built for real weather. Find your perfect balance of function, comfort, and style.">
+    <meta property="og:image" content="https://lektordahle.github.io/html-css-egil-dahle/images/social/open-graph-image.webp">
+    <meta property="og:url" content="https://lektordahle.github.io/html-css-egil-dahle/content-overview">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Rainy Days">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Rainy Days - All Jackets">
+    <meta name="twitter:description" content="Explore all Rainy Days jackets. Waterproof, windproof, and built for real weather. Find your perfect balance of function, comfort, and style.">
+    <meta name="twitter:image" content="https://lektordahle.github.io/html-css-egil-dahle/images/social/open-graph-image.webp">
 </head>
 
 <body>
